// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input custom max/min/step match 1`] = `
<Component>
  <ThemeProvider
    theme={
      Object {
        "colors": Object {
          "black": "#262B34",
          "blackLight": "#5f656b",
          "blackberry": "#2e2d4c",
          "blackberryDark": "#24243C",
          "disabledGrey": "#ced4d9",
          "green": "#86AD20",
          "greenLight": "#e7f1d5",
          "grey": "#697782",
          "greyLight": "#f0f3f5",
          "greySoft": "#788590",
          "lines": "#dce3eb",
          "link": "#216db3",
          "linkDark": "#174a79",
          "overlay": "rgba(33,33,33,0.55)",
          "placeholders": "#e1e4e7",
          "placeholdersHover": "#d0d4d8",
          "primary": "#FF8C00",
          "primaryDark": "#C87600",
          "primaryLight": "#fef4e6",
          "primarySoft": "#ff9d26",
          "purple": "#AA5B9C",
          "purpleLight": "#EEDEEB",
          "red": "#f04540",
          "redDark": "#C43833",
          "redLight": "#FAE7E7",
          "redSoft": "#FF544F",
          "secondary": "#00A8Be",
          "secondaryGrey": "#e4eeff",
          "secondaryLight": "#D6EEF2",
          "secondaryOverlay": "rgba(2,168,189,0.10)",
          "secondarySoft": "#AADFE7",
          "shadow": "rgba(0, 0, 0, 0.25)",
          "tableHeader": "#f6f7f9",
          "tableHeaderHover": "#EBECEF",
          "tableHover": "#FAFBFC",
          "text": Object {
            "black": "#3c4248",
            "danger": "white",
            "default": "#697782",
            "green": "#86AD20",
            "greySoft": "#788590",
            "primary": "white",
            "red": "#f04540",
            "secondary": "#00A8Be",
            "white": "#FFFFFF",
            "yellow": "#E9B200",
          },
          "transparentBlack": "rgba(38, 43, 52, 0.8)",
          "white": "#FFFFFF",
          "yellow": "#E9B200",
          "yellowDark": "#BE9100",
          "yellowLight": "#FCF7E5",
        },
        "effects": Object {
          "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
          "buttonActive": Object {
            "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
          },
        },
        "typography": Object {
          "bigText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "letterSpacing": 0.5,
          },
          "button": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "lineHeight": 1.5,
          },
          "defaultText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 13,
            "letterSpacing": 0.5,
          },
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSizeBase": 13,
          "fontSizeSmall": 11,
          "largeText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "letterSpacing": 0.5,
          },
          "letterSpacing": 0.5,
          "lineHeightBase": 1.5,
          "smallText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "letterSpacing": 0.5,
          },
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi__"
      generateId={[Function]}
      jss={
        Jss {
          "generateId": [Function],
          "id": 3,
          "options": Object {
            "Renderer": [Function],
            "createGenerateId": [Function],
            "id": Object {
              "minify": false,
            },
            "plugins": Array [],
          },
          "plugins": PluginsRegistry {
            "plugins": Object {
              "external": Array [
                Object {
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                  "onUpdate": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onProcessRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
              ],
              "internal": Array [
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
              ],
            },
            "registry": Object {
              "onChangeValue": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": Array [],
              "onProcessStyle": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": Array [
                [Function],
              ],
            },
          },
          "version": "10.0.0",
        }
      }
    >
      <Slider
        isRange={false}
        isReadOnly={false}
        label="Lorem ipsum"
        labelMode="horizontal"
        max={10000}
        min={5000}
        onChange={[Function]}
        overrides={Object {}}
        step={100}
        value={5000}
      >
        <div
          className="HoiPoi__Slider__root-4-0 HoiPoi__Slider__horizontal-4-6"
        >
          <Label
            className="HoiPoi__Slider__Label-4-1"
          >
            <span
              className="HoiPoi__Label__root-4-13 HoiPoi__Slider__Label-4-1"
            >
              <Text
                className="HoiPoi__Label__Text-4-14"
                overrides={Object {}}
              >
                <span
                  className="HoiPoi__Text__root-4-17 HoiPoi__Label__Text-4-14"
                >
                  Lorem ipsum
                </span>
              </Text>
            </span>
          </Label>
          <div
            className="HoiPoi__Slider__formControl-4-3"
          >
            <ComponentEnhancer(undefined)
              activeDotStyle={Object {}}
              className="HoiPoi__Slider__slider-4-8"
              defaultValue={5000}
              disabled={false}
              dotStyle={Object {}}
              dots={false}
              handle={[Function]}
              handleStyle={
                Array [
                  Object {},
                ]
              }
              included={true}
              marks={Object {}}
              max={10000}
              min={5000}
              onAfterChange={[Function]}
              onBeforeChange={[Function]}
              onChange={[Function]}
              prefixCls="rc-slider"
              railStyle={Object {}}
              reverse={false}
              step={100}
              trackStyle={
                Array [
                  Object {},
                ]
              }
              value={5000}
              vertical={false}
            >
              <div
                className="rc-slider HoiPoi__Slider__slider-4-8"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                onTouchStart={[Function]}
              >
                <div
                  className="rc-slider-rail"
                  style={Object {}}
                />
                <Track
                  className="rc-slider-track"
                  included={true}
                  length={0}
                  offset={0}
                  reverse={false}
                  style={Object {}}
                  vertical={false}
                >
                  <div
                    className="rc-slider-track"
                    style={
                      Object {
                        "left": "0%",
                        "right": "auto",
                        "width": "0%",
                      }
                    }
                  />
                </Track>
                <Steps
                  activeDotStyle={Object {}}
                  dotStyle={Object {}}
                  dots={false}
                  included={true}
                  lowerBound={5000}
                  marks={Object {}}
                  max={10000}
                  min={5000}
                  prefixCls="rc-slider"
                  reverse={false}
                  step={100}
                  upperBound={5000}
                  vertical={false}
                >
                  <div
                    className="rc-slider-step"
                  />
                </Steps>
                <div
                  className="HoiPoi__Slider__overlay-4-9"
                  key="0"
                >
                  <span
                    className="HoiPoi__Slider__overlayLabel-4-11"
                    style={
                      Object {
                        "left": "0%",
                      }
                    }
                  >
                    5000
                  </span>
                  <Handle
                    className="HoiPoi__Slider__overlayHandler-4-10"
                    disabled={false}
                    dragging="false"
                    max={10000}
                    min={5000}
                    offset={0}
                    prefixCls="hoi-poi-slider"
                    reverse={false}
                    style={Object {}}
                    value={5000}
                    vertical={false}
                  >
                    <div
                      aria-disabled={false}
                      aria-valuemax={10000}
                      aria-valuemin={5000}
                      aria-valuenow={5000}
                      className="HoiPoi__Slider__overlayHandler-4-10"
                      dragging="false"
                      onBlur={[Function]}
                      onKeyDown={[Function]}
                      onMouseDown={[Function]}
                      role="slider"
                      style={
                        Object {
                          "left": "0%",
                          "right": "auto",
                          "transform": "translateX(-50%)",
                        }
                      }
                      tabIndex={0}
                    />
                  </Handle>
                </div>
                <Marks
                  className="rc-slider-mark"
                  included={true}
                  lowerBound={5000}
                  marks={Object {}}
                  max={10000}
                  min={5000}
                  onClickLabel={[Function]}
                  reverse={false}
                  upperBound={5000}
                  vertical={false}
                >
                  <div
                    className="rc-slider-mark"
                  />
                </Marks>
              </div>
            </ComponentEnhancer(undefined)>
          </div>
        </div>
      </Slider>
    </JssProvider>
  </ThemeProvider>
</Component>
`;

exports[`Input custom tip match 1`] = `
<Component>
  <ThemeProvider
    theme={
      Object {
        "colors": Object {
          "black": "#262B34",
          "blackLight": "#5f656b",
          "blackberry": "#2e2d4c",
          "blackberryDark": "#24243C",
          "disabledGrey": "#ced4d9",
          "green": "#86AD20",
          "greenLight": "#e7f1d5",
          "grey": "#697782",
          "greyLight": "#f0f3f5",
          "greySoft": "#788590",
          "lines": "#dce3eb",
          "link": "#216db3",
          "linkDark": "#174a79",
          "overlay": "rgba(33,33,33,0.55)",
          "placeholders": "#e1e4e7",
          "placeholdersHover": "#d0d4d8",
          "primary": "#FF8C00",
          "primaryDark": "#C87600",
          "primaryLight": "#fef4e6",
          "primarySoft": "#ff9d26",
          "purple": "#AA5B9C",
          "purpleLight": "#EEDEEB",
          "red": "#f04540",
          "redDark": "#C43833",
          "redLight": "#FAE7E7",
          "redSoft": "#FF544F",
          "secondary": "#00A8Be",
          "secondaryGrey": "#e4eeff",
          "secondaryLight": "#D6EEF2",
          "secondaryOverlay": "rgba(2,168,189,0.10)",
          "secondarySoft": "#AADFE7",
          "shadow": "rgba(0, 0, 0, 0.25)",
          "tableHeader": "#f6f7f9",
          "tableHeaderHover": "#EBECEF",
          "tableHover": "#FAFBFC",
          "text": Object {
            "black": "#3c4248",
            "danger": "white",
            "default": "#697782",
            "green": "#86AD20",
            "greySoft": "#788590",
            "primary": "white",
            "red": "#f04540",
            "secondary": "#00A8Be",
            "white": "#FFFFFF",
            "yellow": "#E9B200",
          },
          "transparentBlack": "rgba(38, 43, 52, 0.8)",
          "white": "#FFFFFF",
          "yellow": "#E9B200",
          "yellowDark": "#BE9100",
          "yellowLight": "#FCF7E5",
        },
        "effects": Object {
          "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
          "buttonActive": Object {
            "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
          },
        },
        "typography": Object {
          "bigText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "letterSpacing": 0.5,
          },
          "button": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "lineHeight": 1.5,
          },
          "defaultText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 13,
            "letterSpacing": 0.5,
          },
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSizeBase": 13,
          "fontSizeSmall": 11,
          "largeText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "letterSpacing": 0.5,
          },
          "letterSpacing": 0.5,
          "lineHeightBase": 1.5,
          "smallText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "letterSpacing": 0.5,
          },
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi__"
      generateId={[Function]}
      jss={
        Jss {
          "generateId": [Function],
          "id": 3,
          "options": Object {
            "Renderer": [Function],
            "createGenerateId": [Function],
            "id": Object {
              "minify": false,
            },
            "plugins": Array [],
          },
          "plugins": PluginsRegistry {
            "plugins": Object {
              "external": Array [
                Object {
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                  "onUpdate": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onProcessRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
              ],
              "internal": Array [
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
              ],
            },
            "registry": Object {
              "onChangeValue": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": Array [],
              "onProcessStyle": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": Array [
                [Function],
              ],
            },
          },
          "version": "10.0.0",
        }
      }
    >
      <Slider
        isRange={false}
        isReadOnly={false}
        label="Lorem ipsum"
        labelMode="horizontal"
        max={100}
        min={0}
        onChange={[Function]}
        overrides={Object {}}
        step={1}
        tipFormatter={[Function]}
        value={0}
      >
        <div
          className="HoiPoi__Slider__root-3-0 HoiPoi__Slider__horizontal-3-6"
        >
          <Label
            className="HoiPoi__Slider__Label-3-1"
          >
            <span
              className="HoiPoi__Label__root-3-13 HoiPoi__Slider__Label-3-1"
            >
              <Text
                className="HoiPoi__Label__Text-3-14"
                overrides={Object {}}
              >
                <span
                  className="HoiPoi__Text__root-3-17 HoiPoi__Label__Text-3-14"
                >
                  Lorem ipsum
                </span>
              </Text>
            </span>
          </Label>
          <div
            className="HoiPoi__Slider__formControl-3-3"
          >
            <ComponentEnhancer(undefined)
              activeDotStyle={Object {}}
              className="HoiPoi__Slider__slider-3-8"
              defaultValue={0}
              disabled={false}
              dotStyle={Object {}}
              dots={false}
              handle={[Function]}
              handleStyle={
                Array [
                  Object {},
                ]
              }
              included={true}
              marks={Object {}}
              max={100}
              min={0}
              onAfterChange={[Function]}
              onBeforeChange={[Function]}
              onChange={[Function]}
              prefixCls="rc-slider"
              railStyle={Object {}}
              reverse={false}
              step={1}
              trackStyle={
                Array [
                  Object {},
                ]
              }
              value={0}
              vertical={false}
            >
              <div
                className="rc-slider HoiPoi__Slider__slider-3-8"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                onTouchStart={[Function]}
              >
                <div
                  className="rc-slider-rail"
                  style={Object {}}
                />
                <Track
                  className="rc-slider-track"
                  included={true}
                  length={0}
                  offset={0}
                  reverse={false}
                  style={Object {}}
                  vertical={false}
                >
                  <div
                    className="rc-slider-track"
                    style={
                      Object {
                        "left": "0%",
                        "right": "auto",
                        "width": "0%",
                      }
                    }
                  />
                </Track>
                <Steps
                  activeDotStyle={Object {}}
                  dotStyle={Object {}}
                  dots={false}
                  included={true}
                  lowerBound={0}
                  marks={Object {}}
                  max={100}
                  min={0}
                  prefixCls="rc-slider"
                  reverse={false}
                  step={1}
                  upperBound={0}
                  vertical={false}
                >
                  <div
                    className="rc-slider-step"
                  />
                </Steps>
                <div
                  className="HoiPoi__Slider__overlay-3-9"
                  key="0"
                >
                  <span
                    className="HoiPoi__Slider__overlayLabel-3-11"
                    style={
                      Object {
                        "left": "0%",
                      }
                    }
                  >
                    0%
                  </span>
                  <Handle
                    className="HoiPoi__Slider__overlayHandler-3-10"
                    disabled={false}
                    dragging="false"
                    max={100}
                    min={0}
                    offset={0}
                    prefixCls="hoi-poi-slider"
                    reverse={false}
                    style={Object {}}
                    value={0}
                    vertical={false}
                  >
                    <div
                      aria-disabled={false}
                      aria-valuemax={100}
                      aria-valuemin={0}
                      aria-valuenow={0}
                      className="HoiPoi__Slider__overlayHandler-3-10"
                      dragging="false"
                      onBlur={[Function]}
                      onKeyDown={[Function]}
                      onMouseDown={[Function]}
                      role="slider"
                      style={
                        Object {
                          "left": "0%",
                          "right": "auto",
                          "transform": "translateX(-50%)",
                        }
                      }
                      tabIndex={0}
                    />
                  </Handle>
                </div>
                <Marks
                  className="rc-slider-mark"
                  included={true}
                  lowerBound={0}
                  marks={Object {}}
                  max={100}
                  min={0}
                  onClickLabel={[Function]}
                  reverse={false}
                  upperBound={0}
                  vertical={false}
                >
                  <div
                    className="rc-slider-mark"
                  />
                </Marks>
              </div>
            </ComponentEnhancer(undefined)>
          </div>
        </div>
      </Slider>
    </JssProvider>
  </ThemeProvider>
</Component>
`;

exports[`Input default match 1`] = `
<Component>
  <ThemeProvider
    theme={
      Object {
        "colors": Object {
          "black": "#262B34",
          "blackLight": "#5f656b",
          "blackberry": "#2e2d4c",
          "blackberryDark": "#24243C",
          "disabledGrey": "#ced4d9",
          "green": "#86AD20",
          "greenLight": "#e7f1d5",
          "grey": "#697782",
          "greyLight": "#f0f3f5",
          "greySoft": "#788590",
          "lines": "#dce3eb",
          "link": "#216db3",
          "linkDark": "#174a79",
          "overlay": "rgba(33,33,33,0.55)",
          "placeholders": "#e1e4e7",
          "placeholdersHover": "#d0d4d8",
          "primary": "#FF8C00",
          "primaryDark": "#C87600",
          "primaryLight": "#fef4e6",
          "primarySoft": "#ff9d26",
          "purple": "#AA5B9C",
          "purpleLight": "#EEDEEB",
          "red": "#f04540",
          "redDark": "#C43833",
          "redLight": "#FAE7E7",
          "redSoft": "#FF544F",
          "secondary": "#00A8Be",
          "secondaryGrey": "#e4eeff",
          "secondaryLight": "#D6EEF2",
          "secondaryOverlay": "rgba(2,168,189,0.10)",
          "secondarySoft": "#AADFE7",
          "shadow": "rgba(0, 0, 0, 0.25)",
          "tableHeader": "#f6f7f9",
          "tableHeaderHover": "#EBECEF",
          "tableHover": "#FAFBFC",
          "text": Object {
            "black": "#3c4248",
            "danger": "white",
            "default": "#697782",
            "green": "#86AD20",
            "greySoft": "#788590",
            "primary": "white",
            "red": "#f04540",
            "secondary": "#00A8Be",
            "white": "#FFFFFF",
            "yellow": "#E9B200",
          },
          "transparentBlack": "rgba(38, 43, 52, 0.8)",
          "white": "#FFFFFF",
          "yellow": "#E9B200",
          "yellowDark": "#BE9100",
          "yellowLight": "#FCF7E5",
        },
        "effects": Object {
          "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
          "buttonActive": Object {
            "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
          },
        },
        "typography": Object {
          "bigText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "letterSpacing": 0.5,
          },
          "button": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "lineHeight": 1.5,
          },
          "defaultText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 13,
            "letterSpacing": 0.5,
          },
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSizeBase": 13,
          "fontSizeSmall": 11,
          "largeText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "letterSpacing": 0.5,
          },
          "letterSpacing": 0.5,
          "lineHeightBase": 1.5,
          "smallText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "letterSpacing": 0.5,
          },
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi__"
      generateId={[Function]}
      jss={
        Jss {
          "generateId": [Function],
          "id": 3,
          "options": Object {
            "Renderer": [Function],
            "createGenerateId": [Function],
            "id": Object {
              "minify": false,
            },
            "plugins": Array [],
          },
          "plugins": PluginsRegistry {
            "plugins": Object {
              "external": Array [
                Object {
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                  "onUpdate": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onProcessRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
              ],
              "internal": Array [
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
              ],
            },
            "registry": Object {
              "onChangeValue": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": Array [],
              "onProcessStyle": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": Array [
                [Function],
              ],
            },
          },
          "version": "10.0.0",
        }
      }
    >
      <Slider
        isRange={false}
        isReadOnly={false}
        label="Lorem ipsum"
        labelMode="horizontal"
        max={100}
        min={0}
        onChange={[Function]}
        overrides={Object {}}
        step={1}
        value={0}
      >
        <div
          className="HoiPoi__Slider__root-1-0 HoiPoi__Slider__horizontal-1-6"
        >
          <Label
            className="HoiPoi__Slider__Label-1-1"
          >
            <span
              className="HoiPoi__Label__root-1-13 HoiPoi__Slider__Label-1-1"
            >
              <Text
                className="HoiPoi__Label__Text-1-14"
                overrides={Object {}}
              >
                <span
                  className="HoiPoi__Text__root-1-17 HoiPoi__Label__Text-1-14"
                >
                  Lorem ipsum
                </span>
              </Text>
            </span>
          </Label>
          <div
            className="HoiPoi__Slider__formControl-1-3"
          >
            <ComponentEnhancer(undefined)
              activeDotStyle={Object {}}
              className="HoiPoi__Slider__slider-1-8"
              defaultValue={0}
              disabled={false}
              dotStyle={Object {}}
              dots={false}
              handle={[Function]}
              handleStyle={
                Array [
                  Object {},
                ]
              }
              included={true}
              marks={Object {}}
              max={100}
              min={0}
              onAfterChange={[Function]}
              onBeforeChange={[Function]}
              onChange={[Function]}
              prefixCls="rc-slider"
              railStyle={Object {}}
              reverse={false}
              step={1}
              trackStyle={
                Array [
                  Object {},
                ]
              }
              value={0}
              vertical={false}
            >
              <div
                className="rc-slider HoiPoi__Slider__slider-1-8"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                onTouchStart={[Function]}
              >
                <div
                  className="rc-slider-rail"
                  style={Object {}}
                />
                <Track
                  className="rc-slider-track"
                  included={true}
                  length={0}
                  offset={0}
                  reverse={false}
                  style={Object {}}
                  vertical={false}
                >
                  <div
                    className="rc-slider-track"
                    style={
                      Object {
                        "left": "0%",
                        "right": "auto",
                        "width": "0%",
                      }
                    }
                  />
                </Track>
                <Steps
                  activeDotStyle={Object {}}
                  dotStyle={Object {}}
                  dots={false}
                  included={true}
                  lowerBound={0}
                  marks={Object {}}
                  max={100}
                  min={0}
                  prefixCls="rc-slider"
                  reverse={false}
                  step={1}
                  upperBound={0}
                  vertical={false}
                >
                  <div
                    className="rc-slider-step"
                  />
                </Steps>
                <div
                  className="HoiPoi__Slider__overlay-1-9"
                  key="0"
                >
                  <span
                    className="HoiPoi__Slider__overlayLabel-1-11"
                    style={
                      Object {
                        "left": "0%",
                      }
                    }
                  >
                    0
                  </span>
                  <Handle
                    className="HoiPoi__Slider__overlayHandler-1-10"
                    disabled={false}
                    dragging="false"
                    max={100}
                    min={0}
                    offset={0}
                    prefixCls="hoi-poi-slider"
                    reverse={false}
                    style={Object {}}
                    value={0}
                    vertical={false}
                  >
                    <div
                      aria-disabled={false}
                      aria-valuemax={100}
                      aria-valuemin={0}
                      aria-valuenow={0}
                      className="HoiPoi__Slider__overlayHandler-1-10"
                      dragging="false"
                      onBlur={[Function]}
                      onKeyDown={[Function]}
                      onMouseDown={[Function]}
                      role="slider"
                      style={
                        Object {
                          "left": "0%",
                          "right": "auto",
                          "transform": "translateX(-50%)",
                        }
                      }
                      tabIndex={0}
                    />
                  </Handle>
                </div>
                <Marks
                  className="rc-slider-mark"
                  included={true}
                  lowerBound={0}
                  marks={Object {}}
                  max={100}
                  min={0}
                  onClickLabel={[Function]}
                  reverse={false}
                  upperBound={0}
                  vertical={false}
                >
                  <div
                    className="rc-slider-mark"
                  />
                </Marks>
              </div>
            </ComponentEnhancer(undefined)>
          </div>
        </div>
      </Slider>
    </JssProvider>
  </ThemeProvider>
</Component>
`;

exports[`Input disabled match 1`] = `
<Component>
  <ThemeProvider
    theme={
      Object {
        "colors": Object {
          "black": "#262B34",
          "blackLight": "#5f656b",
          "blackberry": "#2e2d4c",
          "blackberryDark": "#24243C",
          "disabledGrey": "#ced4d9",
          "green": "#86AD20",
          "greenLight": "#e7f1d5",
          "grey": "#697782",
          "greyLight": "#f0f3f5",
          "greySoft": "#788590",
          "lines": "#dce3eb",
          "link": "#216db3",
          "linkDark": "#174a79",
          "overlay": "rgba(33,33,33,0.55)",
          "placeholders": "#e1e4e7",
          "placeholdersHover": "#d0d4d8",
          "primary": "#FF8C00",
          "primaryDark": "#C87600",
          "primaryLight": "#fef4e6",
          "primarySoft": "#ff9d26",
          "purple": "#AA5B9C",
          "purpleLight": "#EEDEEB",
          "red": "#f04540",
          "redDark": "#C43833",
          "redLight": "#FAE7E7",
          "redSoft": "#FF544F",
          "secondary": "#00A8Be",
          "secondaryGrey": "#e4eeff",
          "secondaryLight": "#D6EEF2",
          "secondaryOverlay": "rgba(2,168,189,0.10)",
          "secondarySoft": "#AADFE7",
          "shadow": "rgba(0, 0, 0, 0.25)",
          "tableHeader": "#f6f7f9",
          "tableHeaderHover": "#EBECEF",
          "tableHover": "#FAFBFC",
          "text": Object {
            "black": "#3c4248",
            "danger": "white",
            "default": "#697782",
            "green": "#86AD20",
            "greySoft": "#788590",
            "primary": "white",
            "red": "#f04540",
            "secondary": "#00A8Be",
            "white": "#FFFFFF",
            "yellow": "#E9B200",
          },
          "transparentBlack": "rgba(38, 43, 52, 0.8)",
          "white": "#FFFFFF",
          "yellow": "#E9B200",
          "yellowDark": "#BE9100",
          "yellowLight": "#FCF7E5",
        },
        "effects": Object {
          "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
          "buttonActive": Object {
            "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
          },
        },
        "typography": Object {
          "bigText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "letterSpacing": 0.5,
          },
          "button": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "lineHeight": 1.5,
          },
          "defaultText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 13,
            "letterSpacing": 0.5,
          },
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSizeBase": 13,
          "fontSizeSmall": 11,
          "largeText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "letterSpacing": 0.5,
          },
          "letterSpacing": 0.5,
          "lineHeightBase": 1.5,
          "smallText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "letterSpacing": 0.5,
          },
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi__"
      generateId={[Function]}
      jss={
        Jss {
          "generateId": [Function],
          "id": 3,
          "options": Object {
            "Renderer": [Function],
            "createGenerateId": [Function],
            "id": Object {
              "minify": false,
            },
            "plugins": Array [],
          },
          "plugins": PluginsRegistry {
            "plugins": Object {
              "external": Array [
                Object {
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                  "onUpdate": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onProcessRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
              ],
              "internal": Array [
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
              ],
            },
            "registry": Object {
              "onChangeValue": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": Array [],
              "onProcessStyle": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": Array [
                [Function],
              ],
            },
          },
          "version": "10.0.0",
        }
      }
    >
      <Slider
        isRange={false}
        isReadOnly={true}
        label="Lorem ipsum"
        labelMode="horizontal"
        max={100}
        min={0}
        onChange={[Function]}
        overrides={Object {}}
        step={1}
        value={0}
      >
        <div
          className="HoiPoi__Slider__root-2-0 HoiPoi__Slider__isReadOnly-2-12 HoiPoi__Slider__horizontal-2-6"
        >
          <Label
            className="HoiPoi__Slider__Label-2-1"
          >
            <span
              className="HoiPoi__Label__root-2-13 HoiPoi__Slider__Label-2-1"
            >
              <Text
                className="HoiPoi__Label__Text-2-14"
                overrides={Object {}}
              >
                <span
                  className="HoiPoi__Text__root-2-17 HoiPoi__Label__Text-2-14"
                >
                  Lorem ipsum
                </span>
              </Text>
            </span>
          </Label>
          <div
            className="HoiPoi__Slider__formControl-2-3"
          >
            <ComponentEnhancer(undefined)
              activeDotStyle={Object {}}
              className="HoiPoi__Slider__slider-2-8"
              defaultValue={0}
              disabled={true}
              dotStyle={Object {}}
              dots={false}
              handle={[Function]}
              handleStyle={
                Array [
                  Object {},
                ]
              }
              included={true}
              marks={Object {}}
              max={100}
              min={0}
              onAfterChange={[Function]}
              onBeforeChange={[Function]}
              onChange={[Function]}
              prefixCls="rc-slider"
              railStyle={Object {}}
              reverse={false}
              step={1}
              trackStyle={
                Array [
                  Object {},
                ]
              }
              value={0}
              vertical={false}
            >
              <div
                className="rc-slider rc-slider-disabled HoiPoi__Slider__slider-2-8"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                onTouchStart={[Function]}
              >
                <div
                  className="rc-slider-rail"
                  style={Object {}}
                />
                <Track
                  className="rc-slider-track"
                  included={true}
                  length={0}
                  offset={0}
                  reverse={false}
                  style={Object {}}
                  vertical={false}
                >
                  <div
                    className="rc-slider-track"
                    style={
                      Object {
                        "left": "0%",
                        "right": "auto",
                        "width": "0%",
                      }
                    }
                  />
                </Track>
                <Steps
                  activeDotStyle={Object {}}
                  dotStyle={Object {}}
                  dots={false}
                  included={true}
                  lowerBound={0}
                  marks={Object {}}
                  max={100}
                  min={0}
                  prefixCls="rc-slider"
                  reverse={false}
                  step={1}
                  upperBound={0}
                  vertical={false}
                >
                  <div
                    className="rc-slider-step"
                  />
                </Steps>
                <div
                  className="HoiPoi__Slider__overlay-2-9"
                  key="0"
                >
                  <span
                    className="HoiPoi__Slider__overlayLabel-2-11"
                    style={
                      Object {
                        "left": "0%",
                      }
                    }
                  >
                    0
                  </span>
                  <Handle
                    className="HoiPoi__Slider__overlayHandler-2-10"
                    disabled={true}
                    dragging="false"
                    max={100}
                    min={0}
                    offset={0}
                    prefixCls="hoi-poi-slider"
                    reverse={false}
                    style={Object {}}
                    value={0}
                    vertical={false}
                  >
                    <div
                      aria-disabled={true}
                      aria-valuemax={100}
                      aria-valuemin={0}
                      aria-valuenow={0}
                      className="HoiPoi__Slider__overlayHandler-2-10"
                      dragging="false"
                      onBlur={[Function]}
                      onKeyDown={[Function]}
                      onMouseDown={[Function]}
                      role="slider"
                      style={
                        Object {
                          "left": "0%",
                          "right": "auto",
                          "transform": "translateX(-50%)",
                        }
                      }
                      tabIndex={null}
                    />
                  </Handle>
                </div>
                <Marks
                  className="rc-slider-mark"
                  included={true}
                  lowerBound={0}
                  marks={Object {}}
                  max={100}
                  min={0}
                  onClickLabel={[Function]}
                  reverse={false}
                  upperBound={0}
                  vertical={false}
                >
                  <div
                    className="rc-slider-mark"
                  />
                </Marks>
              </div>
            </ComponentEnhancer(undefined)>
          </div>
        </div>
      </Slider>
    </JssProvider>
  </ThemeProvider>
</Component>
`;
